<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="getmethere.group9.com.getmethere.fragment.TicketFragment">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:background="#282828">

        <TextView android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/ticket_from"
            android:textColor="#33B5E5" />

        <Spinner
            android:id="@+id/ticket_from_spn"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="#555555" />

        <TextView android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/ticket_to"
            android:textColor="#33B5E5" />

        <Spinner
            android:id="@+id/ticket_to_spn"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="#555555" />

        <TextView android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/ticket_type"
            android:textColor="#33B5E5" />

        <Spinner
            android:id="@+id/ticket_type_spn"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="#555555" />

        <TextView android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/ticket_time"
            android:textColor="#33B5E5" />

        <Spinner
            android:id="@+id/ticket_time_spn"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="#555555" />

        <TextView android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/ticket_price_text"
            android:textColor="#33B5E5" />

        <TextView android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/ticket_price"
            android:id="@+id/ticket_price_view"
            android:textColor="#33B5E5" />

        <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/ticket_btn"
            android:id="@+id/ticket_btn"
            android:layout_weight="0.10"
            android:gravity="center_vertical|center_horizontal"
            android:background="#555555"
            android:textColor="#33B5E5" />

    </LinearLayout>

</FrameLayout>
